infrastructure/kustomize/resource/mongo/mongo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
