infrastructure/kustomize/resource/mongo/service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: mongo
spec:
  # Mongo should not be accessible from outside the cluster. Additionally, making this a "headless" service will
  # cause the DNS entries to resolve directly to the IPs of the individual pods
  clusterIP: None
  ports:
  - name: "27017"
    port: 27017
  selector:
    app: mongo
