infrastructure/kustomize/resource/mongo/network-policy.yaml




apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
  namespace: mongo
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
      # This rule only applies to pods in the SAME namespace
    - podSelector:
        matchLabels:
          app: mongo
  - from:
    - namespaceSelector: { }
    - podSelector:
        matchLabels:
          paxata.com/requiresMongo: "true"
    ports:
    - protocol: TCP
      port: 27017
